bin_PROGRAMS = \
nc_thread_local \
nc_address \
nc_atomic_mutex1 \
nc_atomic_mutex2 \
nc_atomic_mutex3 \
nc_atomic_mutex4 \
nc_atomic_mutex5 \
nc_pthread_mutex \
nc_pthread_rwlock_r \
nc_pthread_rwlock_w \
nc_atomic_rwlock_r \
nc_atomic_rwlock_w \
nc_atomic_punch_card_r \
nc_atomic_punch_card_w \
atomic_wait_free \
atomic_wait_free_8 \
atomic_wait_free_16 \
atomic_wait_free_32 \
atomic_wait_free_64 \
pthread_mutex \
atomic_mutex1 \
atomic_mutex2 \
atomic_mutex3 \
atomic_mutex4 \
atomic_mutex5 \
atomic_mutex6 \
atomic_mutex7 \
tx_atomic1 \
pthread_mutex_8 \
atomic_mutex1_8 \
atomic_mutex2_8 \
atomic_mutex3_8 \
atomic_mutex4_8 \
atomic_mutex5_8 \
pthread_mutex_16 \
atomic_mutex1_16 \
atomic_mutex2_16 \
atomic_mutex3_16 \
atomic_mutex4_16 \
atomic_mutex5_16 \
pthread_mutex_32 \
atomic_mutex1_32 \
atomic_mutex2_32 \
atomic_mutex3_32 \
atomic_mutex4_32 \
atomic_mutex5_32 \
pthread_mutex_64 \
atomic_mutex1_64 \
atomic_mutex2_64 \
atomic_mutex3_64 \
atomic_mutex4_64 \
atomic_mutex5_64 \
pthread_rwlock \
atomic_rwlock \
atomic_punch_card \
pthread_rwlock_8 \
atomic_rwlock_8 \
atomic_punch_card_8 \
pthread_rwlock_16 \
atomic_rwlock_16 \
atomic_punch_card_16 \
pthread_rwlock_32 \
atomic_rwlock_32 \
atomic_punch_card_32 \
pthread_rwlock_64 \
atomic_rwlock_64 \
atomic_punch_card_64 \
atomic_rwlock2 \
atomic_cas

nc_thread_local_SOURCES = nc_thread_local.c main.c
nc_address_SOURCES = nc_address.c main.c
nc_atomic_mutex1_SOURCES = nc_atomic_mutex1.c main.c
nc_atomic_mutex2_SOURCES = nc_atomic_mutex2.c main.c
nc_atomic_mutex3_SOURCES = nc_atomic_mutex3.c main.c
nc_atomic_mutex4_SOURCES = nc_atomic_mutex4.c main.c
nc_atomic_mutex5_SOURCES = nc_atomic_mutex5.c main.c
nc_pthread_mutex_SOURCES = nc_pthread_mutex.c main.c
nc_pthread_rwlock_r_SOURCES = nc_pthread_rwlock_r.c main.c
nc_pthread_rwlock_w_SOURCES = nc_pthread_rwlock_w.c main.c
nc_atomic_rwlock_r_SOURCES = nc_atomic_rwlock_r.c main.c
nc_atomic_rwlock_w_SOURCES = nc_atomic_rwlock_w.c main.c
nc_atomic_punch_card_r_SOURCES = nc_atomic_punch_card_r.c main.c
nc_atomic_punch_card_w_SOURCES = nc_atomic_punch_card_w.c main.c

atomic_wait_free_SOURCES = atomic_wait_free.c main.c
atomic_wait_free_CPPFLAGS = -DSLOT=1
atomic_wait_free_8_SOURCES = atomic_wait_free.c main.c
atomic_wait_free_8_CPPFLAGS = -DSLOT=8
atomic_wait_free_16_SOURCES = atomic_wait_free.c main.c
atomic_wait_free_16_CPPFLAGS = -DSLOT=16
atomic_wait_free_32_SOURCES = atomic_wait_free.c main.c
atomic_wait_free_32_CPPFLAGS = -DSLOT=32
atomic_wait_free_64_SOURCES = atomic_wait_free.c main.c
atomic_wait_free_64_CPPFLAGS = -DSLOT=64

pthread_mutex_SOURCES = pthread_mutex.c main.c
atomic_mutex1_SOURCES = atomic_mutex1.c main.c
atomic_mutex2_SOURCES = atomic_mutex2.c main.c
atomic_mutex3_SOURCES = atomic_mutex3.c main.c
atomic_mutex4_SOURCES = atomic_mutex4.c main.c
atomic_mutex5_SOURCES = atomic_mutex5.c main.c
atomic_mutex6_SOURCES = atomic_mutex6.c main.c
atomic_mutex7_SOURCES = atomic_mutex6.c main.c
tx_atomic1_SOURCES = tx_atomic1.c main.c
pthread_mutex_CPPFLAGS = -DSLOT=1
atomic_mutex1_CPPFLAGS = -DSLOT=1
atomic_mutex2_CPPFLAGS = -DSLOT=1
atomic_mutex3_CPPFLAGS = -DSLOT=1
atomic_mutex4_CPPFLAGS = -DSLOT=1
atomic_mutex5_CPPFLAGS = -DSLOT=1
atomic_mutex6_CPPFLAGS = -DSLOT=1
atomic_mutex7_CPPFLAGS = -DSLOT=1
tx_atomic1_CPPFLAGS = -DSLOT=1
tx_atomic1_CFLAGS = -fgnu-tm
tx_atomic1_LDFLAGS = -fgnu-tm

pthread_mutex_8_SOURCES = pthread_mutex.c main.c
atomic_mutex1_8_SOURCES = atomic_mutex1.c main.c
atomic_mutex2_8_SOURCES = atomic_mutex2.c main.c
atomic_mutex3_8_SOURCES = atomic_mutex3.c main.c
atomic_mutex4_8_SOURCES = atomic_mutex4.c main.c
atomic_mutex5_8_SOURCES = atomic_mutex5.c main.c
pthread_mutex_8_CPPFLAGS = -DSLOT=8
atomic_mutex1_8_CPPFLAGS = -DSLOT=8
atomic_mutex2_8_CPPFLAGS = -DSLOT=8
atomic_mutex3_8_CPPFLAGS = -DSLOT=8
atomic_mutex4_8_CPPFLAGS = -DSLOT=8
atomic_mutex5_8_CPPFLAGS = -DSLOT=8

pthread_mutex_16_SOURCES = pthread_mutex.c main.c
atomic_mutex1_16_SOURCES = atomic_mutex1.c main.c
atomic_mutex2_16_SOURCES = atomic_mutex2.c main.c
atomic_mutex3_16_SOURCES = atomic_mutex3.c main.c
atomic_mutex4_16_SOURCES = atomic_mutex4.c main.c
atomic_mutex5_16_SOURCES = atomic_mutex5.c main.c
pthread_mutex_16_CPPFLAGS = -DSLOT=16
atomic_mutex1_16_CPPFLAGS = -DSLOT=16
atomic_mutex2_16_CPPFLAGS = -DSLOT=16
atomic_mutex3_16_CPPFLAGS = -DSLOT=16
atomic_mutex4_16_CPPFLAGS = -DSLOT=16
atomic_mutex5_16_CPPFLAGS = -DSLOT=16

pthread_mutex_32_SOURCES = pthread_mutex.c main.c
atomic_mutex1_32_SOURCES = atomic_mutex1.c main.c
atomic_mutex2_32_SOURCES = atomic_mutex2.c main.c
atomic_mutex3_32_SOURCES = atomic_mutex3.c main.c
atomic_mutex4_32_SOURCES = atomic_mutex4.c main.c
atomic_mutex5_32_SOURCES = atomic_mutex5.c main.c
pthread_mutex_32_CPPFLAGS = -DSLOT=32
atomic_mutex1_32_CPPFLAGS = -DSLOT=32
atomic_mutex2_32_CPPFLAGS = -DSLOT=32
atomic_mutex3_32_CPPFLAGS = -DSLOT=32
atomic_mutex4_32_CPPFLAGS = -DSLOT=32
atomic_mutex5_32_CPPFLAGS = -DSLOT=32

pthread_mutex_64_SOURCES = pthread_mutex.c main.c
atomic_mutex1_64_SOURCES = atomic_mutex1.c main.c
atomic_mutex2_64_SOURCES = atomic_mutex2.c main.c
atomic_mutex3_64_SOURCES = atomic_mutex3.c main.c
atomic_mutex4_64_SOURCES = atomic_mutex4.c main.c
atomic_mutex5_64_SOURCES = atomic_mutex5.c main.c
pthread_mutex_64_CPPFLAGS = -DSLOT=64
atomic_mutex1_64_CPPFLAGS = -DSLOT=64
atomic_mutex2_64_CPPFLAGS = -DSLOT=64
atomic_mutex3_64_CPPFLAGS = -DSLOT=64
atomic_mutex4_64_CPPFLAGS = -DSLOT=64
atomic_mutex5_64_CPPFLAGS = -DSLOT=64

pthread_rwlock_SOURCES = pthread_rwlock.c main.c
atomic_rwlock_SOURCES = atomic_rwlock.c main.c
atomic_punch_card_SOURCES = atomic_punch_card.c main.c
pthread_rwlock_CPPFLAGS = -DSLOT=1
atomic_rwlock_CPPFLAGS = -DSLOT=1
atomic_punch_card_CPPFLAGS = -DSLOT=1

pthread_rwlock_8_SOURCES = pthread_rwlock.c main.c
atomic_rwlock_8_SOURCES = atomic_rwlock.c main.c
atomic_punch_card_8_SOURCES = atomic_punch_card.c main.c
pthread_rwlock_8_CPPFLAGS = -DSLOT=8
atomic_rwlock_8_CPPFLAGS = -DSLOT=8
atomic_punch_card_8_CPPFLAGS = -DSLOT=8

pthread_rwlock_16_SOURCES = pthread_rwlock.c main.c
atomic_rwlock_16_SOURCES = atomic_rwlock.c main.c
atomic_punch_card_16_SOURCES = atomic_punch_card.c main.c
pthread_rwlock_16_CPPFLAGS = -DSLOT=16
atomic_rwlock_16_CPPFLAGS = -DSLOT=16
atomic_punch_card_16_CPPFLAGS = -DSLOT=16

pthread_rwlock_32_SOURCES = pthread_rwlock.c main.c
atomic_rwlock_32_SOURCES = atomic_rwlock.c main.c
atomic_punch_card_32_SOURCES = atomic_punch_card.c main.c
pthread_rwlock_32_CPPFLAGS = -DSLOT=32
atomic_rwlock_32_CPPFLAGS = -DSLOT=32
atomic_punch_card_32_CPPFLAGS = -DSLOT=32

pthread_rwlock_64_SOURCES = pthread_rwlock.c main.c
atomic_rwlock_64_SOURCES = atomic_rwlock.c main.c
atomic_punch_card_64_SOURCES = atomic_punch_card.c main.c
pthread_rwlock_64_CPPFLAGS = -DSLOT=64
atomic_rwlock_64_CPPFLAGS = -DSLOT=64
atomic_punch_card_64_CPPFLAGS = -DSLOT=64

atomic_cas_SOURCES = atomic_cas.c main.c
atomic_rwlock2_SOURCES = atomic_rwlock2.c main.c

if ATOMIC_HACK
nc_atomic_mutex1_SOURCES += nop.c
nc_atomic_mutex2_SOURCES += nop.c
nc_atomic_rwlock_r_SOURCES += nop.c
nc_atomic_rwlock_w_SOURCES += nop.c
atomic_mutex1_SOURCES += nop.c
atomic_mutex2_SOURCES += nop.c
atomic_mutex1_8_SOURCES += nop.c
atomic_mutex2_8_SOURCES += nop.c
atomic_mutex1_16_SOURCES += nop.c
atomic_mutex2_16_SOURCES += nop.c
atomic_mutex1_32_SOURCES += nop.c
atomic_mutex2_32_SOURCES += nop.c
atomic_mutex1_64_SOURCES += nop.c
atomic_mutex2_64_SOURCES += nop.c
atomic_rwlock_SOURCES += nop.c
atomic_rwlock_8_SOURCES += nop.c
atomic_rwlock_16_SOURCES += nop.c
atomic_rwlock_32_SOURCES += nop.c
atomic_rwlock_64_SOURCES += nop.c
endif
